Major: Refactored converters so they can be constructed with a Locale parameter for convenience.  Also, fixed tests and simplified code according to developer list comments.  Much better now!
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk/wicket@455713 13f79535-47bb-0310-9956-ffa450edef68